--- a/06 - BERTopic.ipynb
+++ b/06 - BERTopic.ipynb
@@ -191,11 +191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "t9d8kgtg31RC"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'BERTopic' from 'bertopic' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfeature_extraction\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtext\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TfidfVectorizer\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbertopic\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BERTopic\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbertopic\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvectorizers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ClassTfidfTransformer\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msentence_transformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SentenceTransformer\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'BERTopic' from 'bertopic' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from bertopic import BERTopic\n",
@@ -812,7 +824,8 @@
      "user_tz": -120
     },
     "id": "Jxtsjm_jLgP_",
-    "outputId": "0ede8612-9325-4b1c-ff86-40186d659588"
+    "outputId": "0ede8612-9325-4b1c-ff86-40186d659588",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -921,7 +934,8 @@
      "user_tz": -120
     },
     "id": "brFMyp7Tdsu6",
-    "outputId": "cfaae803-f693-4f12-97f2-d0dda9e67016"
+    "outputId": "cfaae803-f693-4f12-97f2-d0dda9e67016",
+    "scrolled": true
    },
    "outputs": [
     {
